src/Services/adminServices/vendorServices/k8s/configmap.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vendor-service
  labels:
    name: vendor-service
